--- a/_posts/20190719_极简主义.md
+++ b/_posts/20190719_极简主义.md
@@ -1,3 +1,13 @@
+---
+layout: default
+title: 极简主义
+---
+
+{{ page.title }}
+================
+
+<p class="meta">19 Jul 2019 - Shanghai</p>
+
 极简主义  
 作者：葛肖峰  
 日期：2019年7月19日  
