--- a/_posts/2019-07-19-极简主义.md
+++ b/_posts/2019-07-19-极简主义.md
@@ -1,22 +1,36 @@
 ---
 layout: default
-title: How to Become a Hacker 读书笔记
+title: 极简主义
 ---
 
 {{ page.title }}
 ================
 
-<p class="meta">13 Oct 2017- Shanghai</p>
+<p class="meta">19 Jul 2019 - Shanghai</p>
 
-一部黑客帝国让很多人了解到黑客，如何做却不知如何下手，不抱期望的随意寻觅竟然有一位先驱Eric Steven Raymond写了How to的文章。区别于其他注重技术的教程类文章，本文着重描写hacker这个小圈子文化的信仰，方便圈子外的人加入，特别提到cracker骇客这群专门搞破坏活动的人群，力图撇清关系，然而尴尬的是中文语境里找不到合适的词语，来描述这类热爱技术，而又创造了Unix和Internet的分享社区文化。
+极简主义  
+作者：葛肖峰  
+日期：2019年7月19日  
 
-Hacker需要有一种特质，本能的面对令人着迷的问题有着触电般的兴奋感，目前自己能力不够，总是一知半解，急躁的心情容易无法冷静思考解决，需要规划时间和能力来一个一个解决。对于大多数无聊重复工作，hacker不愿无脑的去浪费生命去完成，本能的释放脑细胞来自动化，解放劳动力；下一阶段自己通过不断学习，使用脚本,命令行和快捷键来提高工作效率。得以依靠强大的互联网，信息和知识的自由流动，大多数问题可以不依赖别人，以后自己主动学习某一技能，来解决特定问题，多思考才能保持头脑的高效运作。
+今天，我读完了美国人乔舒亚（Joshua Field Millburn）和瑞安 (Ryan Nicodemus)写的「极简主义」（Minimalism）。
 
-态度不能代替能力，能力需要10年或者10000小时的投入才可能有回报，换算一下每天需要额外的三小时投入。hacker的能力分成三个领域，包括coding能力，开源操作系统的平台操控能力，前端开发能力。只掌握一种编程语言是远远不够的，Python 最适合作为第一语言 ，C 拥有直接调用硬件的最快性能 , Perl 方便s服务器hell脚本, Java代表面向对象编程思想 ,Lisp 代表功能编程思想，这些语言都需要掌握，增加自己的武器库。开源操作系统可以提供最强大的编程工具，极高的自由度方便优化任何系统代码，改善明显的不足，不受windows和macos的闭源限制。迅速发展的前端已经不仅仅只是用HTML/CSS显示静态内容，通过JavaScript,Ajax，React,Node.js能动态处理各种业务逻辑。English is also important , need to learn with English first , could get best resouse easily and also talk to best person quickly.
+两人二十多岁就实现了所谓的美国梦，但是更多的物质消费并没有带来更多的快乐。一场家庭的变故使乔舒亚认真反思自己的过去，开始极简主义的生活，后来他的好友瑞安也加入进来，共同创立了theminimalists的网站，帮助更多的人获得幸福。
 
-Hacking是一种编程Style，最直接的方式就是提供自己开发的开源软件给其他人使用，轻量且快速迭代，同时可以不考虑过去轻松重写代码。能力不足时帮助其他开源程序测试或者调试，都是不错的选择。上面提到三个领域的能力需要渐进式的学习，因为互相有依赖，一段时间就转换学习另一种领域，螺旋式上升。
+快乐和幸福如此相似，却又相隔很远。为了短暂的快乐，我们可以躲进自己构造的虚拟世界，不和他人真正的触碰，只是为了逃避麻烦。为了长久的幸福，我们却不知该怎么做，也许了解极简主义之后会有所启发。
 
-最直接也是最有效的方式就是read the code and write the code , 模仿大师并以成为大师为目标而努力。同时也可以通过其他活动辅助训练，包括写作，阅读科幻小说，健身而磨练身体，冥想而磨练大脑，学习乐器而感受音乐。
-
-Reference :
-http://www.catb.org/esr/faqs/hacker-howto.html
+下面是一些摘录：<br>
+- 我们在这世上只有有限的时间，这些时间可以用来积攒金钱财富，也可以花在有意义的事情上----后者不一定会妨碍人们追求前者，但对财富永无止境的追求并不能将我们带向有意义的生活。  
+- 健康本身并不是目的地，而是载你前往目的地的交通工具。  
+- 我们鼓励你列出自己拖延了的事项，把那些"应该做"的转化成"必须做"的，寻找出发点，然后付诸行动。  
+- "应该做"列表消极被动，节节败退，令人昏昏欲睡，死气沉沉。而"必须做"列表则生机勃勃，活力充沛，元气满满。  
+- 父母们的老生常谈----你最亲密的朋友数量一只手数得过来----一般来说是正确的。  
+- 在任何关系中，你都不应该指望他人为了遵守你的标准、信仰或价值观而改变。  
+- 你唯一能改变的人是你自己。当你以身作则时，与你走得最近的人往往也会跟着效仿。  
+- 当我们欣赏对方是因为他们本身的样子、而非我们所希望的模样，我们才能真正地达成理解。  
+- 重要的是你要找到正在做你想做的事情的人，向他们学习，吸收他们的知识经验，然后大步行动。  
+- 挣钱要花时间，而时间就是我的自由，在放弃我的金钱的同时，也就放弃了我的一小部分自由。  
+- 这杯咖啡值我两美元的自由吗？  
+- 如果一种改变无法坚持下去，那是因为这个人无法从这种改变中看到长期收益。  
+- 你越成长，就越能帮助其他人成长；而越是帮助他人成长，你自己就越能获得更多成长。  
+- 做自己感兴趣的事是可以的，但只做这些会令你的存在变得空虚。没有奉献的人生是没有意义的。  
+- 如果你现在正在为某事摇摆不定，不知该不该做，那就直接行动，做你认为正确的事情。按照内心中那个声音说的去做。  
