--- a/_posts/2019-07-19-极简主义.md
+++ b/_posts/2019-07-19-极简主义.md
@@ -19,11 +19,11 @@ title: 极简主义
 快乐和幸福如此相似，却又相隔很远。为了短暂的快乐，我们可以躲进自己构造的虚拟世界，不和他人真正的触碰，只是为了逃避麻烦。为了长久的幸福，我们却不知该怎么做，也许了解极简主义之后会有所启发。
 
 下面是一些摘录：<br>
-- 我们在这世上只有有限的时间，这些时间可以用来积攒金钱财富，也可以花在有意义的事情上----后者不一定会妨碍人们追求前者，但对财富永无止境的追求并不能将我们带向有意义的生活。  
+- 我们在这世上只有有限的时间，这些时间可以用来积攒金钱财富，也可以花在有意义的事情上——后者不一定会妨碍人们追求前者，但对财富永无止境的追求并不能将我们带向有意义的生活。  
 - 健康本身并不是目的地，而是载你前往目的地的交通工具。  
 - 我们鼓励你列出自己拖延了的事项，把那些"应该做"的转化成"必须做"的，寻找出发点，然后付诸行动。  
 - "应该做"列表消极被动，节节败退，令人昏昏欲睡，死气沉沉。而"必须做"列表则生机勃勃，活力充沛，元气满满。  
-- 父母们的老生常谈----你最亲密的朋友数量一只手数得过来----一般来说是正确的。  
+- 父母们的老生常谈——你最亲密的朋友数量一只手数得过来——一般来说是正确的。  
 - 在任何关系中，你都不应该指望他人为了遵守你的标准、信仰或价值观而改变。  
 - 你唯一能改变的人是你自己。当你以身作则时，与你走得最近的人往往也会跟着效仿。  
 - 当我们欣赏对方是因为他们本身的样子、而非我们所希望的模样，我们才能真正地达成理解。  
@@ -34,3 +34,7 @@ title: 极简主义
 - 你越成长，就越能帮助其他人成长；而越是帮助他人成长，你自己就越能获得更多成长。  
 - 做自己感兴趣的事是可以的，但只做这些会令你的存在变得空虚。没有奉献的人生是没有意义的。  
 - 如果你现在正在为某事摇摆不定，不知该不该做，那就直接行动，做你认为正确的事情。按照内心中那个声音说的去做。  
+
+
+
+
