change photo name to english name

--- a/_posts/2019-08-08-项目管理知识体系指南.md
+++ b/_posts/2019-08-08-项目管理知识体系指南.md
@@ -5,7 +5,7 @@
 
 为了考PMP认证（Project Management Professional），今天读完了PMI协会出版的项目管理知识体系指南。前三章的基础概念值得细看，后面第四章开始的工具箱繁多而无重点，匆匆略过即可。下面是一些看书过程中的思考。
 
-/image/项目管理知识体系指南_第六版.JPG
+/image/pmbok_6th.jpg
 
 项目是一种创造独特服务的临时性工作，相对而言运营就是一类重复持续的事务。然而独特中也有重复元素，临时也可以很久，很难清晰区分。然而项目又能够驱动组织变革，推动组织从当前状态达到将来的期望状态，就像调整饮食结构制定减脂计划，是一种成长。运营只是一种维持，就像每天吃饭是一种无意识的习惯，通过不断的成长，从而打破旧习惯，形成新习惯。
 
