fix markdown display

--- a/_posts/2020-01-03-抱婴儿姿势.md
+++ b/_posts/2020-01-03-抱婴儿姿势.md
@@ -3,7 +3,10 @@
 婴儿身子软，头脑和屁股是两个重心，需用大人的手肘和手掌来拖住才安全，放松手臂让宝宝躺的更舒服，就像搭建一张安全柔软的吊床。
 
 ## 摇篮式，从婴儿床平躺抱起婴儿
-![](https://raw.githubusercontent.com/xiaofeng1986/git-img-repo/master/articles/2020/20200103-cradle.jpeg)
+
+![cradle.jpeg](https://raw.githubusercontent.com/xiaofeng1986/git-img-repo/master/articles/2020/20200103-cradle.jpeg)
+
+![20190809_022839.png](https://i.loli.net/2019/08/09/jP89eGYEwJQc16Z.png)
 
 婴儿平躺，左手把婴儿头部抬起，把右手伸进婴儿的肩颈空隙，直到手肘拖住，用左手掌拖住屁股抱起，用右手掌拖住大腿根部。再用左手加固屁股，轻拍屁股安抚。
 
