--- a/_posts/2020/2020-01-12-中考失利怎么办?.md
+++ b/_posts/2020/2020-01-12-中考失利怎么办?.md
@@ -4,7 +4,7 @@
 
 中专，职校，技校同属中专学历，能参加高职高考读大专，在通过专升本进入大学。（复读和出国也是可选项）<br>
 [中专生有何出路](https://www.zhihu.com/question/22953782)<br>
-[中专如何升大专](https://zhuanlan.zhihu.com/p/36846069) 
+[中专如何升大专](https://zhuanlan.zhihu.com/p/36846069) <br>
 [除了普高之外，中考生还有哪些选择](https://kuaibao.qq.com/s/20190719A0JFWU00?refer=spider)
 
 可以参考如下河南省周口市公办学校重点中专，同时发现一个河南中职网的微信公众号，有疑问可以询问专业人士。<br>
