--- a/_posts/2020/2020-01-12-中考失利怎么办?.md
+++ b/_posts/2020/2020-01-12-中考失利怎么办?.md
@@ -7,11 +7,12 @@
 [中专如何升大专](https://zhuanlan.zhihu.com/p/36846069) <br>
 [除了普高之外，中考生还有哪些选择](https://kuaibao.qq.com/s/20190719A0JFWU00?refer=spider)
 
-可以参考如下河南省周口市公办学校重点中专，同时发现一个河南中职网的微信公众号，有疑问可以询问专业人士。<br>
+如果可以的话尽量选择重点中专，学习氛围和环境相对也会好一点。
+举例，河南省周口市公办学校重点中专如下：<br>
 - 省级示范性学校：<br>
 [河南省水利水电学校](http://zk.hagaozhong.com/School/SchoolDetail?id=2013042617571824164127901)， 招生计划：计算机应用<br>
 [郸城县职业中等专业学校](http://zk.hagaozhong.com/School/SchoolDetail?id=2014052017351030879641701)，招生计划：计算机应用<br>
 [周口幼儿师范学校](http://zk.hagaozhong.com/School/SchoolDetail?id=2013042617571823564122701)，招生计划：学前教育<br>
 - 市级示范性学校：<br>
 [周口市卫生职业中等专业学校](http://zk.hagaozhong.com/School/SchoolDetail?id=2013042617571826564157001)，招生计划：康复技术
-- 读中职、选学校、挑专业——就上河南中职网！咨询学校或专业，您也可以联系王老师：13676924163（同微信）或QQ：1032633652
+- 同时发现一个河南中职网的微信公众号，有其他疑问也可询问当地专业人士。读中职、选学校、挑专业——就上河南中职网！咨询学校或专业，您也可以联系王老师：13676924163（同微信）或QQ：1032633652
