--- a/_posts/2020/2020-01-12-中考失利怎么办?.md
+++ b/_posts/2020/2020-01-12-中考失利怎么办?.md
@@ -1,4 +1,4 @@
-# 2020-01-12-中考失利怎么办？
+# 中考失利怎么办？
 公办普通高中的录取率只有50%，剩下的25%进入民办高中，都能参加普通高考。<br>
 [2019年河南全省中考录取率仅为51％？为什么中考比高考更重要？](https://new.qq.com/rain/a/20191211a09x0x00)
 
